--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.13"
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "materialize-css": "^1.0.0-alpha.4",
+    "popper.js": "^1.14.0",
+    "vue": "^2.5.13",
+    "vue-awesome": "^2.3.5",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
